fixed header margin on mobile

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,6 +4,9 @@ header {
   display: flex;
   margin: 4rem;
   align-items: center;
+  @include mobile {
+    margin-bottom: 1rem;
+  }
 }
 
 .notifications {
