--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -82,6 +82,11 @@ header {
   margin: 4rem;
   align-items: center;
 }
+@media screen and (max-width: 480px) {
+  header {
+    margin-bottom: 1rem;
+  }
+}
 
 .notifications {
   display: flex;
